--- a/usuario.html
+++ b/usuario.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-md-6">
             <div>
-              <h1 class=" ms-4 mb-5 mt-3"style="color:#1A4301";>
+              <h1 class="ms-4 mb-5 mt-3" style="color: #1a4301" ;>
                 Cada año se desperdician 2.5 mil millones de toneladas de
                 alimento
               </h1>
@@ -99,15 +99,28 @@
           <div class="col-md-12">
             <button
               type="button"
-              class="rounded-pill btn btn-success fs-3 fw-bold ms-4"style="border-color:#1A4301;background-color:#1A4301;color:white";;
+              class="rounded-pill btn btn-success fs-3 fw-bold ms-4"
+              style="
+                border-color: #1a4301;
+                background-color: #1a4301;
+                color: white;
+              "
+              ;;
             >
-            DESCARGA LA APLICACIÓN
+              DESCARGA LA APLICACIÓN
             </button>
             <button
               type="button"
-              class="rounded-pill btn fs-3 fw-bold ms-4"style="border-color:#1A4301;background-color:#1A4301;color:white;";
+              class="rounded-pill btn fs-3 fw-bold ms-4"
+              style="
+                border-color: #1a4301;
+                background-color: #1a4301;
+                color: white;
+              "
+              ;
             >
-              INSTRUCTIVO <svg
+              INSTRUCTIVO
+              <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="22"
                 height="16"
