--- a/iniciativas.html
+++ b/iniciativas.html
@@ -69,25 +69,27 @@
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid w-100" src="imagenes/donaciones.jpeg" />
-            <div class="bg-light rounded"style="position: absolute; top: 10px" >
-              <div class="mb-3 bg-light rounded" >
-                <p class="text-dark bold">Quiero apoyar con donaciones mensuales de</p>
-                <label for="exampleFormControlInput1" class=" form-label"
+            <div class="bg-light rounded" style="position: absolute; top: 10px">
+              <div class="mb-3 bg-light rounded">
+                <p class="text-dark bold">
+                  Quiero apoyar con donaciones mensuales de
+                </p>
+                <label for="exampleFormControlInput1" class="form-label"
                   >$1000</label
                 >
                 <input
                   type="text"
-                  class="rounded form-control bg-light "
+                  class="rounded form-control bg-light"
                   id="exampleFormControlInput1"
                   placeholder="$1000"
                 />
               </div>
-              <div class="mb-3 bg-light rounded  ">
+              <div class="mb-3 bg-light rounded">
                 <label for="exampleFormControlTextarea1" class="form-label"
                   >$1500</label
                 >
                 <textarea
-                  class="form-control bg-light rounded "
+                  class="form-control bg-light rounded"
                   id="exampleFormControlTextarea1"
                   rows="3"
                 ></textarea>
@@ -99,7 +101,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="ms-4 mb-3 mt-5"style="color:#1A4301">
+            <h1 class="ms-4 mb-3 mt-5" style="color: #1a4301">
               ¿Qué pasa si no se logra vender todo el excedente en un día?
             </h1>
             <div>
