--- a/negocio.html
+++ b/negocio.html
@@ -191,10 +191,10 @@
         <div class="row mx-auto my-auto justify-content-center">
           <div
             id="recipeCarousel"
-            class="carousel slide"
+            class="container carousel slide"
             data-bs-ride="carousel"
           >
-            <div class="carousel-inner" role="listbox">
+            <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="col-md-3">
                   <div class="card">
@@ -280,34 +280,13 @@
                   </div>
                 </div>
               </div>
-              <a
-                class="carousel-control-prev bg-transparent w-aut"
-                href="#recipeCarousel"
-                role="button"
-                data-bs-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-              </a>
-              <a
-                class="carousel-control-next bg-transparent w-aut"
-                href="#recipeCarousel"
-                role="button"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-              </a>
             </div>
           </div>
         </div>
       </div>
       <script>
         let items = document.querySelectorAll(".carousel .carousel-item");
+        console.log(items.length)
         items.forEach((el) => {
           const minPerSlide = 4;
           let next = el.nextElementSibling;
