--- a/usuario.html
+++ b/usuario.html
@@ -138,25 +138,28 @@
       </div>
     </main>
     <footer class="container-fluid mt-5 mb-1">
-      <p class="texto text-center fw-bold space-between mt-5 mb-0">
-        Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
-      </p>
-      <p class="texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
-      <p class="texto text-center fw-bold space-between mb-0">
-        Trabajo grupal Diseño y Desarrollo Web
-      </p>
-      <p class="texto text-center fw-bold space-between mb-0">
-        Las imágenes cuentan con derechos reservados de Freepik
-      </p>
-      <img
-        class="mb-3 ml-3"
-        src="imagenes/LogoUADE.png"
-        2023
-        Todos
-        los
-        derechos
-        reservados.
-      />
+      <div class="row">
+        <p class="col texto text-center fw-bold space-between mt-5 mb-0">
+          Abi Fonzi - Daniela Gangotena - Lautaro Frosio - Martin Malaureille
+        </p>
+        <p class="texto text-center fw-bold space-between mb-0">Sitio Grupal</p>
+        <p class="texto text-center fw-bold space-between mb-0">
+          Trabajo grupal Diseño y Desarrollo Web
+        </p>
+        <p class="texto text-center fw-bold space-between mb-0">
+          Las imágenes cuentan con derechos reservados de Freepik
+        </p>
+      </div>
+      <div class="container-fluid mt-5 mb-1 float-md-start">
+        <div class="row justify-content-between">
+          <div class="col-md-1 col-sm-3">
+            <img class="img-fluid" src="imagenes/LogoUADE.png" />
+          </div>
+          <div class="col-md-3 col-sm-9">
+            <p>2023 Todos los derechos reservados.</p>
+          </div>
+        </div>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
