--- a/tuopinion.html
+++ b/tuopinion.html
@@ -113,14 +113,15 @@
           </div>
         </div>
         <div class="form-floating mb-3" style="color: white">
-          <label for="exampleFormControlTextarea5" class="form-label"
-            >Comentarios</label
-          >
-          <textarea
+          <input
+            type="text"
             class="form-control border border-success rounded-pill"
-            id="exampleFormControlTextarea5"
-            rows="10"
-          ></textarea>
+            style="color: #1a4301"
+            ;
+            id="floatingInput"
+            placeholder="Comentarios "
+          />
+          <label for="floatingInput">Comentarios</label>
         </div>
         <button
           type="button"
