--- a/iniciativas.html
+++ b/iniciativas.html
@@ -71,33 +71,54 @@
             <img class="img-fluid w-100" src="imagenes/donaciones.jpeg" />
             <div class="bg-light rounded" style="position: absolute; top: 10px">
               <div class="mb-3 bg-light rounded">
-                <p class="text-dark bold">
+                <p class="text-dark text-center mt-3 bold fs-5">
                   Quiero apoyar con donaciones mensuales de
                 </p>
-                <label for="exampleFormControlInput1" class="form-label"
-                  >$1000</label
-                >
+                <div class="row">
+                  <div class="col-md-4">
+                <label
+                  for="exampleFormControlInput1"
+                  class="form-label"
+                ></label>
                 <input
                   type="text"
-                  class="rounded form-control bg-light"
+                  class="rounded form-control bg-light ms-4"
                   id="exampleFormControlInput1"
                   placeholder="$1000"
                 />
               </div>
-              <div class="mb-3 bg-light rounded">
-                <label for="exampleFormControlTextarea1" class="form-label"
-                  >$1500</label
-                >
-                <textarea
-                  class="form-control bg-light rounded"
-                  id="exampleFormControlTextarea1"
-                  rows="3"
-                ></textarea>
+              <div class="col-md-4">
+              <label for="exampleFormControlInput1" class="form-label"></label>
+              <input
+                type="text"
+                class="rounded form-control bg-light ms-2 me-2"
+                id="exampleFormControlInput1"
+                placeholder="$2000"
+              />
               </div>
+              <div class="col-md-4">
+              <label for="exampleFormControlInput1" class="form-label"></label>
+              <input
+                type="text"
+                class="rounded form-control bg-light me-4"
+                id="exampleFormControlInput1"
+                placeholder="$1500"
+              />
             </div>
+            <div class="row">
+              <div class="col-md-12">
+                <label for="exampleFormControlInput1" class="form-label"></label>
+                <input
+                  type="text"
+                  class="rounded form-control bg-light ms-2 me-2"
+                  id="exampleFormControlInput1"
+                  placeholder="Otro monto, mayor a $500"
+                />
+              </div>
           </div>
         </div>
       </div>
+    </div>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
