--- a/tuopinion.html
+++ b/tuopinion.html
@@ -113,14 +113,13 @@
           </div>
         </div>
         <div class="form-floating mb-3" style="color: white">
-          <input
-            type="text"
-            class="form-control border border-success rounded-pill"
-            style="color: #1a4301"
+          <textarea
+            class="form-control"
+            style="border-color: #1a4301; height: 250px"
             ;
-            id="floatingInput"
-            placeholder="Comentarios "
-          />
+            id="InputTextArea"
+            placeholder="Comentarios"
+          ></textarea>
           <label for="floatingInput">Comentarios</label>
         </div>
         <button
