--- a/iniciativas.html
+++ b/iniciativas.html
@@ -198,17 +198,250 @@
               <div
                 id="paso2"
                 class="col-md-6 me-3"
-                style="position: absolute; top: 10px; right: 0px; display: none;"
+                style="position: absolute; top: 10px; right: 0px; display: none"
               >
-                PASO 2
-                <button onclick="siguientePaso()">Siguiente</button>
+                <div class="bg-light rounded ms-5 mt-2">
+                  <div class="mb-3 bg-light rounded">
+                    <p class="text-dark text-center mt-3 bold fs-5">
+                      Completa los siguientes datos
+                    </p>
+                    <div class="row justify-content-end">
+                      <div class="col-md-4">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control bg-light ms-4"
+                          id="exampleFormControlInput1"
+                          placeholder="$1000"
+                        />
+                      </div>
+                      <div class="col-md-4">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control bg-light ms-2 me-2"
+                          id="exampleFormControlInput1"
+                          placeholder="$2000"
+                        />
+                      </div>
+                      <div class="col-md-4">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control bg-light me-4"
+                          id="exampleFormControlInput1"
+                          placeholder="$1500"
+                        />
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                          ></label>
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-5"
+                            id="exampleFormControlInput1"
+                            placeholder="Otro monto, mayor a $500"
+                          />
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                            >Provincia:</label
+                          >
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="Seleccione una provincia"
+                          />
+                        </div>
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                            >Localidad</label
+                          >
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="Localidad"
+                          />
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                            >Comedor</label
+                          >
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="$1500"
+                          />
+                        </div>
+
+                        <div class="col-md-6">
+                          <button
+                            type="button"
+                            class="rounded-pill btn fs-3 fw-bold ms-4 mt-4 text-white mb-4"
+                            style="
+                              border-color: #1a4301;
+                              background-color: #1a4301;
+                            "
+                            ;
+                            ;
+                            onclick="siguientePaso()"
+                          >
+                            CONTINUAR
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div
                 id="paso3"
                 class="col-md-6 me-3"
-                style="position: absolute; top: 10px; right: 0px; display: none;"
+                style="position: absolute; top: 10px; right: 0px; display: none"
               >
-                PASO 3
+                <div class="bg-light rounded ms-5 mt-2">
+                  <div class="mb-3 bg-light rounded">
+                    <p class="text-dark text-center mt-3 bold fs-5">
+                      Completa los datos de tu tarjeta
+                    </p>
+                    <div class="row justify-content-end">
+                      <div class="col-md-4">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control bg-light ms-4"
+                          id="exampleFormControlInput1"
+                          placeholder="$1000"
+                        />
+                      </div>
+                      <div class="col-md-4">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control bg-light ms-2 me-2"
+                          id="exampleFormControlInput1"
+                          placeholder="$2000"
+                        />
+                      </div>
+                      <div class="col-md-4">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control bg-light me-4"
+                          id="exampleFormControlInput1"
+                          placeholder="$1500"
+                        />
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                          ></label>
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-5"
+                            id="exampleFormControlInput1"
+                            placeholder="Otro monto, mayor a $500"
+                          />
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                            >Provincia:</label
+                          >
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="Seleccione una provincia"
+                          />
+                        </div>
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                            >Localidad</label
+                          >
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="Localidad"
+                          />
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                            >Comedor</label
+                          >
+                          <input
+                            type="text"
+                            class="rounded form-control bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="$1500"
+                          />
+                        </div>
+
+                        <div class="col-md-6">
+                          <button
+                            type="button"
+                            class="rounded-pill btn fs-3 fw-bold ms-4 mt-4 text-white mb-4"
+                            style="
+                              border-color: #1a4301;
+                              background-color: #1a4301;
+                            "
+                            ;
+                            ;
+                            onclick="donacionexitosa()"
+                          >
+                            FINALIZAR
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
